--- a/something-smart.html
+++ b/something-smart.html
@@ -47,7 +47,7 @@
  <li class="web-color"><a href="http://www.khanacademy.org/">khanacademy</li><a/>
  
   
- <h1<img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
+ <h1><img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
  
@@ -59,11 +59,12 @@ social studies,technology and forign languages.</p>
 
 
 <li class="web-color"><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
+<img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"bjpincbeck logo"width=180>
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
 <li class="web-color"><a href="http://www.hippocampus.org">hippocampuse</a></li>
-<p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.Another free site, HippoCampus was created by 
+img src= HippoCampus was created by 
 the Monterey Institute for Technology and Education.
 Offering multimedia presentations provided by a variety of universities and schools, the site covers subjects,
 including math, science, religion and history. No log-in or registration is needed although Adobe Flash is required to view lessons.
@@ -71,6 +72,7 @@ HippoCampus is planning a site redesign in the summer of 2011, including additio
 Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
 
 <li class="web-color"><a href="http://www.shmoop.com/">shamoop</a></li>
+<img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"shamoop logo"width=180>
 <p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
 Math, science and many more.
 
@@ -87,6 +89,12 @@ the review page. Students can also earn badges and points as they work through p
 In addition to online study groups, Grockit offers an Academy section based upon California state standards for 
 grades 7-12 in subjects ranging from math to language arts.</p>
 
+<li><a href="http://academicadvantage.com">academic advantage</a></li>
+
+<p><em>“We believe that every child can achieve”</em>Founded in 2000 and provides results-oriented, tutoring services such as Mathematics, English, Algebra, Chemistry, etc for students 
+in grades K-12 by highly educated tutors. 
+It is one of the nation’s most respected tutoring providing the highest quality instruction to thousands of students in the process. According to The Academic Advantage,”
+we believe each and every child can achieve and our experienced as well as knowledgeable tutors are dedicated to helping students develop their self-confidence to succeed academically.</p>
 
 
 </div>
