--- a/something-smart.html
+++ b/something-smart.html
@@ -14,7 +14,7 @@
     width:700px;
     margin:auto;
     border:10px;
-    patting:6px;
+    padding:6px;
    }
   #container {
             width: 1000px;
@@ -29,6 +29,11 @@
      body{
       font-size:25px}
  </style>
+ 
+ 
+ 
+ 
+ 
     <div id="container">
     
     
@@ -73,7 +78,7 @@ Already, a history mini-site has been launched to provide in-depth study materia
 <li class="web-color"><a href="http://www.shmoop.com/">shamoop</a></li>
 <img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"shamoop logo"width=180>
 <p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
-Math, science and many more.
+Math, science and many more.</p>
 
 </p>
 <li class="web-color"><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
