--- a/something-smart.html
+++ b/something-smart.html
@@ -42,7 +42,7 @@
  
  
  <h1 id="simply-smart"</h1>simple smart</h1>
- <p></p>When doing your home work or helping your sisters,brothers,doughters or sons, 
+ <p>When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  well you've found the right place to look for help.these are some of the best homework helping websites on the internet.
  No more embarressment in front of a seven years old.</p>
@@ -51,7 +51,9 @@
  <li class="web-color"><a href="http://www.khanacademy.org/">khanacademy</li><a/>
  
   
- <h1><img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
+ <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180><p>Khan Academy provides a 
+ free world-class education for anyone, anywhere. 
+ Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
  
