--- a/something-smart.html
+++ b/something-smart.html
@@ -65,20 +65,19 @@ social studies,technology and forign languages.</p>
 
 
 <li class="web-color"><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
-<img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"bjpincbeck logo"width=180>
+<img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"bjpincbeck logo"width=200>
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
 <li class="web-color"><a href="http://www.hippocampus.org">hippocampuse</a></li>
-img src= HippoCampus was created by 
-the Monterey Institute for Technology and Education.
+ <p>HippoCampus was created by the Monterey Institute for Technology and Education.
 Offering multimedia presentations provided by a variety of universities and schools, the site covers subjects,
 including math, science, religion and history. No log-in or registration is needed although Adobe Flash is required to view lessons.
 HippoCampus is planning a site redesign in the summer of 2011, including additional content and features.
 Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
 
 <li class="web-color"><a href="http://www.shmoop.com/">shamoop</a></li>
-<img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"shamoop logo"width=180>
+<img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"shamoop logo">
 <p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
 Math, science and many more.</p>
 
