--- a/something-smart.html
+++ b/something-smart.html
@@ -10,12 +10,8 @@
   #simply-smart{
     background-color:rgb(214, 163, 43)
   }
-   #container{
-    width:700px;
-    margin:auto;
-    border:10px;
-    padding:6px;
-   }
+  
+   
   #container {
             width: 1000px;
             margin: auto;
@@ -51,8 +47,8 @@
  <li class="web-color"><a href="http://www.khanacademy.org/">khanacademy</li><a/>
  
   
- <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180><p>Khan Academy provides a 
- free world-class education for anyone, anywhere. 
+ <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180><p>Khan Academy <em>provides a 
+ free world-class education for anyone, anywhere.</em> 
  Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
