--- a/something-smart.html
+++ b/something-smart.html
@@ -13,7 +13,7 @@
   
    
   #container {
-            width: 1000px;
+            width: 800px;
             margin: auto;
             padding: 15px;
             border: 2px solid rgb(0,0,0);
@@ -90,7 +90,7 @@ the review page. Students can also earn badges and points as they work through p
 In addition to online study groups, Grockit offers an Academy section based upon California state standards for 
 grades 7-12 in subjects ranging from math to language arts.</p>
 
-<li><a href="http://academicadvantage.com">academic advantage</a></li>
+<li class="web-color"><a href="http://academicadvantage.com">academic advantage</a></li>
 
 <p><em>“We believe that every child can achieve”</em>Founded in 2000 and provides results-oriented, tutoring services such as Mathematics, English, Algebra, Chemistry, etc for students 
 in grades K-12 by highly educated tutors. 
