--- a/something-smart.html
+++ b/something-smart.html
@@ -53,7 +53,7 @@
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
  
-<li class=web-color><a href="http://www.homeworkspot.com">homeworkspot</a></li>
+<li class="web-color"><a href="http://www.homeworkspot.com">homeworkspot</a></li>
  
 <p>This site is a free homework information portal that provides access to K-12 homework-related sites.
 It's organized by topic and grade level for ease of use. homework spot helps with homework such as math science, 
