--- a/something-smart.html
+++ b/something-smart.html
@@ -24,6 +24,7 @@
      }
      body{
       font-size:20px}
+      li{color:rgb(214, 163, 43);}
  </style>
  
  
@@ -44,7 +45,7 @@
  No more embarressment in front of a seven years old!</p>
  <ul>
  
- <li class="web-color"><a href="http://www.khanacademy.org/">khanacademy</li><a/>
+ <li><a href="http://www.khanacademy.org/">khanacademy</li><a/>
  
   
  <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180><p>Khan Academy <em>provides a 
