--- a/something-smart.html
+++ b/something-smart.html
@@ -62,8 +62,10 @@ social studies,technology and forign languages.</p>
 
 
 <li class="web-color"><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
-<img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"bjpincbeck logo"width=200>
-<p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
+
+
+<img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html"alt"bjpincbeck logo" width=180><p>Features a roundup of the best online sources for nearly every school subject, including art, 
+music, foreign languages, math, 
 and current events.</p>
  
 <li class="web-color"><a href="http://www.hippocampus.org">hippocampuse</a></li>
