--- a/something-smart.html
+++ b/something-smart.html
@@ -23,9 +23,11 @@
      }
      body{
       font-size:40px}
-      
+      p{
+       color:rgb(130,7,23);
+      }
  </style>
- CV<div id="container">
+ <div id="container">
  <h1 id="simply-smart"</h1>simple smart</h1>
  <p>When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
