--- a/something-smart.html
+++ b/something-smart.html
@@ -5,7 +5,8 @@
  <body> 
  <style>
   body{
-   background-color:rgb(161,,161,123);
+   background-color:rgb(151,7,120);
+   ]
    
   #simply-smart{
     background-color:rgb(214, 163, 43)
