--- a/something-smart.html
+++ b/something-smart.html
@@ -7,7 +7,9 @@
   body{
    background-color:rgb(197,201,197);
    }
-   h1{ color:rgb(184, 173, 71);
+   #simply-smart{
+    color:rgb(184, 173, 71);}
+    
   #simply-smart{
     background-color:rgb(214, 163, 43)
   }
@@ -23,7 +25,7 @@
           color:rgb(130,7,23);
      }
      body{
-      font-size:40px}
+      font-size:20px}
       p{
        color:rgb(130,7,23);
       }
