--- a/something-smart.html
+++ b/something-smart.html
@@ -16,10 +16,10 @@
   
    
   #container {
-            width: 1120px;
+            width: 800px;
             margin: auto;
             padding: 15px;
-            border: 2px solid rgb(0,0,0);
+            border: 2px solid rgb(47, 212, 190);
              }
      .web-color{
           color:rgb(130,7,23);
@@ -27,7 +27,7 @@
      body{
       font-size:20px}
       p{
-       color:rgb(130,7,23);
+       color:rgb(0,0,0);
       }
  
   
