--- a/something-smart.html
+++ b/something-smart.html
@@ -25,7 +25,8 @@
           color:rgb(130,7,23);
      }
      body{
-      font-size:11px}
+      font-size:9px;}
+      font-family:"Helvetica", sans-serif;
       p{
        color:rgb(0,0,0);
       }
