--- a/something-smart.html
+++ b/something-smart.html
@@ -5,10 +5,10 @@
  <body> 
  <style>
   body{
-   background-color:rgb(197,201,197);
+   background-color:rgb(,,);
    }
    #simply-smart{
-    color:rgb(184, 173, 71);}
+    color:rgb(1, 17, 71);}
     
   #simply-smart{
     background-color:rgb(214, 163, 43)
