--- a/something-smart.html
+++ b/something-smart.html
@@ -5,7 +5,7 @@
  <body> 
  <style>
   body{
-   background-color:rgb(,,);
+   background-color:rgb(215,146,271);
    }
    #simply-smart{
     color:rgb(1, 17, 71);}
