--- a/something-smart.html
+++ b/something-smart.html
@@ -5,13 +5,13 @@
  <body> 
  <style>
   body{
-   background-color:rgb(215,146,271);
+   background-color:rgb(121, 130, 135);
    }
    #simply-smart{
     color:rgb(1, 17, 71);}
     
   #simply-smart{
-    background-color:rgb(21, 78, 43)
+    background-color:rgb(237, 247, 247)
   }
   
    
