--- a/something-smart.html
+++ b/something-smart.html
@@ -35,7 +35,7 @@
  </style>
  
  <div id="container">
- <h1 id="simply-smart"simple smart</h1>
+ <h1 id="simply-smart">simple smart</h1>
  <p>When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  Well you've found the right place to look for help.These are some of the best homework helping websites on the internet.
