--- a/something-smart.html
+++ b/something-smart.html
@@ -8,7 +8,7 @@
    background-color:rgb(121, 130, 135);
    }
    #simply-smart{
-    color:rgb(1, 17, 71);}
+    color:rgb(8, 99, 61)};
     
   #simply-smart{
     background-color:rgb(237, 247, 247)
