--- a/something-smart.html
+++ b/something-smart.html
@@ -35,7 +35,7 @@
  </style>
  
  <div id="container">
- <h1 id="simply-smart">simple smart</h1>
+ <h1 id="simply-smart">simply smart</h1>
  <p>When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  Well you've found the right place to look for help.These are some of the best homework helping websites on the internet.
@@ -65,7 +65,7 @@ HippoCampus is planning a site redesign in the summer of 2011, including additio
 Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
 
 <li class="web-color"><a href="http://www.shmoop.com/">shamoop</a></li>
-<p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
+<p> shampoo provided a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
 Math, science and many more.</p>
 
 
