--- a/something-smart.html
+++ b/something-smart.html
@@ -8,9 +8,7 @@
    background-color:rgb(252, 252, 252);
    }
    #simply-smart{
-    color:rgb(8, 99, 61)};
-    
-  #simply-smart{
+    color:rgb(8, 99, 61)
     background-color:rgb(230, 244, 247)
   }
   
@@ -65,7 +63,7 @@ HippoCampus is planning a site redesign in the summer of 2011, including additio
 Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
 
 <li class="web-color"><a href="http://www.shmoop.com/">shamoop</a></li>
-<p> shampoo provided a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
+<p> shamoop provided a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
 Math, science and many more.</p>
 
 
