--- a/something-smart.html
+++ b/something-smart.html
@@ -8,8 +8,8 @@
    background-color:rgb(252, 252, 252);
    }
    #simply-smart{
-    color:rgb(8, 99, 61)
-    background-color:rgb(230, 244, 247)
+    color:rgb(8, 99, 61);
+    background-color:rgb(230,25,247);
   }
   
    
