--- a/something-smart.html
+++ b/something-smart.html
@@ -19,7 +19,7 @@
             margin: auto;
             padding: 6px;
             border: 2px solid rgb(110, 115, 115);
-            Border:10px solid rgb(110,25,200);
+            Border:5px solid rgb(110,25,200);
              }
      .web-color{
           color:rgb(0,0,0);
@@ -55,12 +55,12 @@ It's organized by topic and grade level for ease of use. homework spot helps wit
 social studies,technology and forign languages.</p>
 
 <li class="web-color"><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
-<img src="http://edweb.tusd.k12.az.us/gale/library/images/pinchbeck_logo.jpg">
+<img src="http://edweb.tusd.k12.az.us/gale/library/images/pinchbeck_logo.jpg"alt"bjinchbeck logo"width=180>
 <p>bjpinchbeck features a roundup of the best online sources for nearly every school subject, including art, 
 music, foreign languages, math, and current events.</p>
  
 <li class="web-color"><a href="http://www.hippocampus.org">hippocampus</a></li>
-<img src="http://www.hippocampus.org/hippocampus.skins/default/header/logo.jpg">
+<img src="http://www.hippocampus.org/hippocampus.skins/default/header/logo.jpg"alt"hippocampus logo"width=180>
  <p>HippoCampus was created by the Monterey Institute for Technology and Education.
 Offering multimedia presentations provided by a variety of universities and schools, the site covers subjects,
 including math, science, religion and history. No log-in or registration is needed although Adobe Flash is required to view lessons.
@@ -68,19 +68,19 @@ HippoCampus is planning a site redesign in the summer of 2011, including additio
 Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
 
 <li class="web-color"><a href="http://www.shmoop.com/">shmoop</a></li>
-<img src="https://d32v6r6fgi4k49.cloudfront.net/images/general/shmoop-logo-watermark.jpg">
+<img src="https://d32v6r6fgi4k49.cloudfront.net/images/general/shmoop-logo-watermark.jpg"alt"shmoop logo"width=180>
 <p> shamoop provided a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
 Math, science and many more.</p>
 
 
 <li class="web-color"><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
-<img src="http://www.kidinfo.com/FPageTitle.jpg">
+<img src="http://www.kidinfo.com/FPageTitle.jpg"alt"kidinfo"width=180>
 <p>This website, created by an elementary school teacher, has compiled a list of homework help, reference resources, 
 and search engines for kids. You can do a search or click through the topics to find information about subjects, 
 such as insects or the history of toys.</p>
 
 <li class="web-color"><a href="https://grockit.com/">grockit</a></li>
-<img src="http://res.cloudinary.com/hrscywv4p/image/upload/c_limit,h_540,w_720/llowo4qo1dxghe3yehf5.png">
+<img src="http://res.cloudinary.com/hrscywv4p/image/upload/c_limit,h_540,w_720/llowo4qo1dxghe3yehf5.png"alt"grockit logo"width=180>
 <p>Deriving its name from the Robert Heinlein classic Stranger in a Strange Land, Grockit adds a social networking twist to
 online homework help. Students can review sample problems simultaneously and conduct real-time chat discussions on 
 the review page. Students can also earn badges and points as they work through practice sessions.
@@ -88,7 +88,7 @@ In addition to online study groups, Grockit offers an Academy section based upon
 grades 7-12 in subjects ranging from math to language arts.</p>
 
 <li class="web-color"><a href="http://academicadvantage.com">academic advantage</a></li>
-<img src="https://pbs.twimg.com/profile_images/435147908510253056/qJn7DY_c.jpeg">
+<img src="https://pbs.twimg.com/profile_images/435147908510253056/qJn7DY_c.jpeg"alt"academic advantage"width=180>
 <p><em>“We believe that every child can achieve”</em>Founded in 2000 and provides results-oriented, tutoring services such as Mathematics, English, Algebra, Chemistry, etc for students 
 in grades K-12 by highly educated tutors. 
 It is one of the nation’s most respected tutoring providing the highest quality instruction to thousands of students in the process. According to The Academic Advantage,”
