--- a/something-smart.html
+++ b/something-smart.html
@@ -27,8 +27,7 @@
      body{
       font-size:15px;}
       font-family:"Helvetica", sans-serif;
-      p{
-       color:rgb(0,0,0);
+       color:rgb(136, 193, 201);
       }
  
   
