--- a/something-smart.html
+++ b/something-smart.html
@@ -5,7 +5,7 @@
  <body> 
  <style>
   body{
-   background-color:rgb(252, 252, 252);
+   background-color:rgb(136, 193, 201);
    }
    #simply-smart{
     color:rgb(8, 99, 61);
@@ -48,7 +48,7 @@
  including interactive challenges, assessments, and videos that any student can use.</p>
  
  <li class="web-color"><a href="http://www.homeworkspot.com">homeworkspot</a></li>
- <img src="http://www.homeworkspot.com/images/homeworkflag.gif"alt"homeworkspot"width="180">
+ <img src="http://www.homeworkspot.com/images/homeworkflag.gif"alt"homeworkspot"width="180"hight="">
  <p>This site is a free homework information portal that provides access to K-12 homework-related sites.
 It's organized by topic and grade level for ease of use. homework spot helps with homework such as math science, 
 social studies,technology and forign languages.</p>
