--- a/something-smart.html
+++ b/something-smart.html
@@ -20,7 +20,15 @@
             padding: 6px;
             border: 2px solid rgb(110, 115, 115);
             Border:10px solid rgb(110,25,200);
-             }
+            background: rgb(230, 230, 230);
+            width: 70%;
+            height: 180px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            margin: 15px 0px 10px 6px;
+            
+            
+        }
      .web-color{
           color:rgb(0,0,0);
      }
