--- a/something-smart.html
+++ b/something-smart.html
@@ -10,7 +10,7 @@
    #simply-smart{
     color:rgb(8, 99, 61);
     background-color:rgb(230,25,247);
-    Font-size:30px;
+    Font-size:45px;
   }
   
    
@@ -57,7 +57,7 @@ It's organized by topic and grade level for ease of use. homework spot helps wit
 social studies,technology and forign languages.</p>
 
 <li class="web-color"><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
-<img src="http://edweb.tusd.k12.az.us/gale/library/images/pinchbeck_logo.jpg"alt"bjinchbeck logo"width="180">
+<img src="http://edweb.tusd.k12.az.us/gale/library/images/pinchbeck_logo.jpg"alt"bjinchbeck logo"width="180"hight"180px>
 <p>bjpinchbeck features a roundup of the best online sources for nearly every school subject, including art, 
 music, foreign languages, math, and current events.</p>
  
