--- a/something-smart.html
+++ b/something-smart.html
@@ -9,7 +9,7 @@
    }
    #simply-smart{
     color:rgb(8, 99, 61);
-    background-color:rgb(230,25,247);
+    background-color:rgb(110, 115, 115);
     Font-size:45px;
   }
   
