--- a/something-smart.html
+++ b/something-smart.html
@@ -54,18 +54,18 @@
  including interactive challenges, assessments, and videos that any student can use.</p>
  
  <li class="web-color"><a href="http://www.homeworkspot.com">homeworkspot</a></li>
- <img src="http://www.homeworkspot.com/images/homeworkflag.gif"alt"homeworkspot"width="180"hight="">
+ <img src="http://www.homeworkspot.com/images/homeworkflag.gif"alt"homeworkspot"width="180"height="90">
  <p>This site is a free homework information portal that provides access to K-12 homework-related sites.
 It's organized by topic and grade level for ease of use. homework spot helps with homework such as math science, 
 social studies,technology and forign languages.</p>
 
 <li class="web-color"><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
-<img src="http://edweb.tusd.k12.az.us/gale/library/images/pinchbeck_logo.jpg"alt"bjinchbeck logo"width="180"hight"180px>
+<img src="http://edweb.tusd.k12.az.us/gale/library/images/pinchbeck_logo.jpg"alt"bjinchbeck logo"width="180"height"180">
 <p>bjpinchbeck features a roundup of the best online sources for nearly every school subject, including art, 
 music, foreign languages, math, and current events.</p>
  
 <li class="web-color"><a href="http://www.hippocampus.org">hippocampus</a></li>
-<img src="http://www.hippocampus.org/hippocampus.skins/default/header/logo.jpg"alt"hippocampus logo"width=180>
+<img src="http://www.hippocampus.org/hippocampus.skins/default/header/logo.jpg"alt"hippocampus logo"width="180" height="100">
  <p>HippoCampus was created by the Monterey Institute for Technology and Education.
 Offering multimedia presentations provided by a variety of universities and schools, the site covers subjects,
 including math, science, religion and history. No log-in or registration is needed although Adobe Flash is required to view lessons.
@@ -79,7 +79,7 @@ Math, science and many more.</p>
 
 
 <li class="web-color"><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
-<img src="http://www.kidinfo.com/FPageTitle.jpg"alt"kidinfo"width=180>
+<img src="http://www.kidinfo.com/FPageTitle.jpg"alt"kidinfo"width="180"height="80">
 <p>This website, created by an elementary school teacher, has compiled a list of homework help, reference resources, 
 and search engines for kids. You can do a search or click through the topics to find information about subjects, 
 such as insects or the history of toys.</p>
