--- a/something-smart.html
+++ b/something-smart.html
@@ -79,7 +79,7 @@ Math, science and many more.</p>
 
 
 <li class="web-color"><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
-<img src="http://www.kidinfo.com/FPageTitle.jpg"alt"kidinfo"width="180"height="80">
+<img src="http://www.kidinfo.com/FPageTitle.jpg"alt"kidinfo"width="180"height="100">
 <p>This website, created by an elementary school teacher, has compiled a list of homework help, reference resources, 
 and search engines for kids. You can do a search or click through the topics to find information about subjects, 
 such as insects or the history of toys.</p>
@@ -93,7 +93,7 @@ In addition to online study groups, Grockit offers an Academy section based upon
 grades 7-12 in subjects ranging from math to language arts.</p>
 
 <li class="web-color"><a href="http://academicadvantage.com">academic advantage</a></li>
-<img src="https://pbs.twimg.com/profile_images/435147908510253056/qJn7DY_c.jpeg"alt"academic advantage"width=180>
+<img src="https://pbs.twimg.com/profile_images/435147908510253056/qJn7DY_c.jpeg"alt"academic advantage"width="180"height="100">
 <p><em>“We believe that every child can achieve”</em>Founded in 2000 and provides results-oriented, tutoring services such as Mathematics, English, Algebra, Chemistry, etc for students 
 in grades K-12 by highly educated tutors. 
 It is one of the nation’s most respected tutoring providing the highest quality instruction to thousands of students in the process. According to The Academic Advantage,”
